@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-03-25T16:26:44Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
+  "timestamp" : "2022-03-26T01:09:36Z",
+  "count" : 10,
+  "count_minmax" : [ 2, 10 ],
   "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 0,
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
+  "uniques" : 6,
+  "uniques_minmax" : [ 1, 6 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
