@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-25T16:26:44Z",
+  "timestamp" : "2022-03-26T01:09:36Z",
   "count_outdated" : 89,
   "uniques_outdated" : 61,
-  "count" : 120,
-  "uniques" : 80,
+  "count" : 128,
+  "uniques" : 85,
   "clones" : [
     {
       "timestamp": "2022-03-14T00:00:00Z",
@@ -35,10 +35,10 @@
     },
     {
       "timestamp": "2022-03-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 10,
+      "count_minmax": [ 2, 10 ],
+      "uniques": 6,
+      "uniques_minmax": [ 1, 6 ]
     }
   ]
 }
