@@ -1,6 +1,6 @@
 {
-  "count": 31,
-  "uniques": 17,
+  "count": 39,
+  "uniques": 19,
   "clones": [
     {
       "timestamp": "2022-03-14T00:00:00Z",
@@ -24,8 +24,8 @@
     },
     {
       "timestamp": "2022-03-25T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 10,
+      "uniques": 6
     }
   ]
 }
