@@ -1,3 +1,9 @@
+2022-03-26T01:09:36Z:
+* notice: last 14d: all unq: 39 19
+* notice: prev accum: outdated-all outdated-unq / all unq: 89 61 / 120 80
+* notice: next accum: outdated-all outdated-unq / all unq: 89 61 / 128 85
+* notice: prev json diff // prev day diff: unq all: +5 +8 / -0 -0 // +5 +8 / -0 -0
+
 2022-03-25T16:26:44Z:
 * notice: last 14d: all unq: 31 17
 * notice: prev accum: outdated-all outdated-unq / all unq: 89 61 / 118 79
